2006-03-30  CrazyPit  <crazypit13@gmail.com>
	* rails.el: new variable rails-tags-command, rails-open-log now interactive + cleanup,
	rails-create-tags cleanup, new hook for dired mode
	* rails-navigation.el: new variable rails-find-file-function, 3 new rails-finds.
	* rails-ui.el: cleanup, add many new hotkeys

2006-03-28  CrazyPit  <crazypit13@gmail.com>
	* rails-ui.el: create rails-ui.el, move UI code from rails.el to rails-ui.el
	* rails-navigation.el: rails-goto-controller-->view, rails-goto-view-->controller
	  rails-goto-all-->simple, rails-goto-all-->helper, rails-goto-all-->functional-test,
	  rails-goto-all-->controller extracted to other files. 
	  Refactoring of rails-goto-file-from-file-actions and rails-goto-file-from-file
	  now run-time generation and invisible, helper function rails-goto-menu-call.
	  menu items available.
	* rails-for-rhtml.el: switch-to-controller-action added
	* rails-for-controller.el: views-for-current-action. switch-by-current-controller,
	  switch-to-functional-test, switch-to-helper, switch-to-view2, switch-to-controller --
	  extracted with renaming from rails-navigation.el. 
	* rails-core.el: fix in functional-test-file, + long-controller-name added, 
	  rails-core:menu upadte (posn-at-point call added)

2006-03-28  dima  <dima.exe@gmail.com>

	* rails-for-controller.el: new functions
	rails-controller:get-current-controller-and-action,
	rails-controller:switch-with-menu
	(rails-for-controller): setup variables rails-primary-switch-func,
	rails-secondary-switch-func

	* rails-core.el (rails-core:helper-file): fix invalid path
	(rails-core:functional-test-file): fix invalid path
	(rails-core:get-view-files): ACTION is optional parameter

	* rails-for-rhtml.el: new functions rails-rhtml:switch-with-menu,
	rails-rhtml:switch-to-helper,
	rails-rhtml:get-current-controller-and-action
	(rails-for-rhtml): setup variables rails-primary-switch-func,
	rails-secondary-switch-func
